# misc

./: .gitignore  README.md  npp_workspace.txt
_asm/Learning/: modern_x86_assembly.txt
_asm/test/: test.s
_c/: Makefile  make_config
_c/collections/: Makefile
_c/collections/array/: Makefile  Makefile_array  Makefile_farray
_c/collections/linked_list/: Makefile
_c/collections/tree/: Makefile
_c/color/: Makefile  Makefile_color  Makefile_crgb_array  color.c  color.h  crgb_array.c  crgb_array.h  test_color.c  test_color_t.c  test_crgb_array.c
_c/data/: Makefile  data.c  data.h  test_data.c
_c/dsa_portal_iup/: Makefile
_c/math/: Makefile
_c/math/mat/: mat.c  (+10 more)
_c/mesh/: Makefile  mesh.c  mesh.h  mesh_builder.c  mesh_builder.h  mesh_tree.c  mesh_tree.h  test_mesh.c
_c/test_sh_code/: Makefile  main.c  test.s
_c/test_sh_code_nasm/: Makefile
_c/tetris/: tetris_game.c  texture2.xcf
_c/tetris_V3/: tetris_game.c  tetris_input.c
_c64/projects/: bug_test.D64
_cpp/_test/: Makefile_test_boost
_cpp/color/: Makefile  color.cpp  color.h  test_color.cpp
_cpp/math/: Makefile
_go/: BUILD_AND_RUN.txt  INSTALLATION_HINTS.txt
_java/: Tips_and_Tricks.txt
_java/projects/: README.txt  _mvn.bat  mvn-new.bat  settings.xml
_javascript/: Ideas.txt  vue_plugins.txt
_lua/_learning_/: Makefile  README.txt  coroutine.lua  types.lua
_perl/projects/: lesson_00001.pl  tesst2.pl  testtk.pl
_rust/: MY_BASIC_QUESTIONS.txt  README_INSTALL.txt
_rust/project/py_render_lib/: Cargo.toml
_tcltk/projects/: NOTES.txt
thoughts/: Druide.odt  Druide.txt  Streuner.txt
(+482 files in other folders)
